--- a/app dev project/fabric.html
+++ b/app dev project/fabric.html
@@ -24,10 +24,10 @@
         <div class="navbar">
                 <a class="active" href="index.html"><i class="fa fa-fw fa-home"></i> Home</a>
 
-                <a href="contact.html"><i class="fa fa-fw fa-envelope"></i> Contact US</a>
-                <a href="about.html"><i class="fa fa-fw fa-about"></i> About</a>
-                <a href="store.html"><i class="fa fa-fw fa-search"></i> Store</a>
-                <a href="fabric.html"><i class="fas fa-fw fa-tshirt"></i> Fabrics</a>
+                <a href="contact.html"><i class="fa fa-fw fa-Envelope"></i> Contact US</a>
+                <a href="about.html"><i class="fa fa-fw fa-About"></i> About</a>
+                <a href="store.html"><i class="fa fa-fw fa-Search"></i> Store</a>
+                <a href="fabric.html"><i class="fas fa-fw fa-Tshirt"></i> Fabrics</a>
         </div>
 
 
